Repo cleaning and production docker compose was added

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,5 @@
-.DS_Store
-.env
-.flaskenv
-*.pyc
-*.pyo
-env/
-venv/
-env*
-dist/
-build/
-*.egg
-*.egg-info/
-_mailinglist
-.tox/
-.cache/
-.pytest_cache/
-.idea/
-docs/_build/
-.vscode
 
-environment/.env.production
-environment/.env.testing
-environment/.env.development
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-*,cover
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
