--- a/complete_authentication_system/flasker/scripts/default.conf
+++ b/complete_authentication_system/flasker/scripts/default.conf
@@ -1,5 +1,5 @@
-upstream shopiler {
-    server flask:8000;
+upstream flasker {
+    server flask:5000;
 }
 
 server {
@@ -7,8 +7,8 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://flask-project-structure;
-        proxy_set_header Host "localhost";
+        proxy_pass http://flasker;
+        proxy_set_header Host $host:5000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
     }
