--- a/complete_authentication_system/flasker/scripts/buildspec.aws.yml
+++ b/complete_authentication_system/flasker/scripts/buildspec.aws.yml
@@ -19,4 +19,4 @@ phases:
       - docker-compose --file=docker/docker-compose.production.aws.yml push
 artifacts:
   files:
-    - 'Dockerrun.aws.json'
+    - 'complete_authentication_system/flasker/scripts/Dockerrun.aws.json'
